--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,7 @@
 project_name: m3
 builds:
-  - main: ./src/cmd/services/m3dbnode/main/main.go
+  - id: m3dbnode
+    main: ./src/cmd/services/m3dbnode/main/main.go
     binary: m3dbnode
     ldflags: >-
       -X {{.Env.BASE_PACKAGE}}.Revision={{.Env.GIT_REVISION}}
@@ -16,7 +17,8 @@ builds:
       # - windows
     goarch:
       - amd64
-  - main: ./src/cmd/services/m3coordinator/main/main.go
+  - id: m3coordinator
+    main: ./src/cmd/services/m3coordinator/main/main.go
     binary: m3coordinator
     ldflags: >-
       -X {{.Env.BASE_PACKAGE}}.Revision={{.Env.GIT_REVISION}}
@@ -32,7 +34,8 @@ builds:
       # - windows
     goarch:
       - amd64
-  - main: ./src/cmd/services/m3query/main/main.go
+  - id: m3query
+    main: ./src/cmd/services/m3query/main/main.go
     binary: m3query
     ldflags: >-
       -X {{.Env.BASE_PACKAGE}}.Revision={{.Env.GIT_REVISION}}
@@ -46,7 +49,8 @@ builds:
       - darwin
       # Issue #692 tracks Windows support.
       # - windows
-  - main: ./src/cmd/services/m3aggregator/main/main.go
+  - id: m3aggregator
+    main: ./src/cmd/services/m3aggregator/main/main.go
     binary: m3aggregator
     ldflags: >-
       -X {{.Env.BASE_PACKAGE}}.Revision={{.Env.GIT_REVISION}}
