--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,6 +3,8 @@ builds:
   - id: m3dbnode
     main: ./src/cmd/services/m3dbnode/main/main.go
     binary: m3dbnode
+    env:
+      - CGO_ENABLED=0
     ldflags: >-
       -X {{.Env.BASE_PACKAGE}}.Revision={{.Env.GIT_REVISION}}
       -X {{.Env.BASE_PACKAGE}}.Branch={{.Env.GIT_BRANCH}}
@@ -20,6 +22,8 @@ builds:
   - id: m3coordinator
     main: ./src/cmd/services/m3coordinator/main/main.go
     binary: m3coordinator
+    env:
+      - CGO_ENABLED=0
     ldflags: >-
       -X {{.Env.BASE_PACKAGE}}.Revision={{.Env.GIT_REVISION}}
       -X {{.Env.BASE_PACKAGE}}.Branch={{.Env.GIT_BRANCH}}
@@ -37,6 +41,8 @@ builds:
   - id: m3query
     main: ./src/cmd/services/m3query/main/main.go
     binary: m3query
+    env:
+      - CGO_ENABLED=0
     ldflags: >-
       -X {{.Env.BASE_PACKAGE}}.Revision={{.Env.GIT_REVISION}}
       -X {{.Env.BASE_PACKAGE}}.Branch={{.Env.GIT_BRANCH}}
@@ -52,6 +58,8 @@ builds:
   - id: m3aggregator
     main: ./src/cmd/services/m3aggregator/main/main.go
     binary: m3aggregator
+    env:
+      - CGO_ENABLED=0
     ldflags: >-
       -X {{.Env.BASE_PACKAGE}}.Revision={{.Env.GIT_REVISION}}
       -X {{.Env.BASE_PACKAGE}}.Branch={{.Env.GIT_BRANCH}}
