--- a/scripts/comparator/m3query.yml
+++ b/scripts/comparator/m3query.yml
@@ -11,7 +11,7 @@ rpc:
 
 metrics:
   scope:
-    prefix: "coordinator"
+    prefix: "query"
   prometheus:
     handlerPath: /metrics
     listenAddress: 0.0.0.0:7203 # until https://github.com/m3db/m3/issues/682 is resolved
