--- a/src/query/config/m3query-dev-remote.yml
+++ b/src/query/config/m3query-dev-remote.yml
@@ -5,8 +5,9 @@ listenAddress:
 backend: grpc
 
 rpc:
-  remoteListenAddresses:
-    - 0.0.0.0:9000
+  remotes:
+    - name: "remote"
+      remoteListenAddresses: ["localhost:9000"]
 
 metrics:
   scope:
