[aggregator] Do not require aggregator ID to be concatenated with port and add error logs

--- a/scripts/development/m3_stack/m3aggregator.yml
+++ b/scripts/development/m3_stack/m3aggregator.yml
@@ -94,6 +94,8 @@ aggregator:
   hostID:
     resolver: environment
     envVarName: M3AGGREGATOR_HOST_ID
+  instanceID:
+    type: host_id
   metricPrefix: ""
   counterPrefix: ""
   timerPrefix: ""
