--- a/src/aggregator/config/m3aggregator.yml
+++ b/src/aggregator/config/m3aggregator.yml
@@ -94,6 +94,8 @@ aggregator:
   hostID:
     resolver: environment
     envVarName: M3AGGREGATOR_HOST_ID
+  instanceID:
+    type: host_id
   metricPrefix: ""
   counterPrefix: ""
   timerPrefix: ""
