Adding comparator tests, making grafana local only

--- a/scripts/comparator/docker-compose.yml
+++ b/scripts/comparator/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "./:/etc/prometheus/"
   grafana:
     build:
-      context: .
+      context: ./grafana
       dockerfile: grafana.Dockerfile
     expose:
       - "3000"
