--- a/scripts/comparator/grafana/datasource.yaml
+++ b/scripts/comparator/grafana/datasource.yaml
@@ -3,7 +3,7 @@ datasources:
     type: prometheus
     access: proxy
     url: http://prometheus:9090
-  - name: M3Query - Prometheus
+  - name: M3Query
     type: prometheus
     access: proxy
     url: http://m3query:7201
