--- a/scripts/vagrant/single/Vagrantfile
+++ b/scripts/vagrant/single/Vagrantfile
@@ -57,8 +57,8 @@ Vagrant.configure("2") do |config|
     override.ssh.private_key_path = $SSH_KEY
   end
 
-  config.vm.provision "file", source: "./provision", destination: "$HOME/provision"
-  config.vm.provision "file", source: "../../kube", destination: "$HOME/provision/kube"
+  config.vm.provision "file", source: "../provision", destination: "$HOME/provision"
+  config.vm.provision "file", source: "../../../kube", destination: "$HOME/provision/kube"
 
   config.vm.provision "shell", privileged: true, inline: <<-SHELL
     cd provision && DOCKER_USER=#{$USER} ./setup_privileged.sh
