Use env var for feature docker image

--- a/scripts/vagrant/provision/manifests/m3db-secondary.yaml
+++ b/scripts/vagrant/provision/manifests/m3db-secondary.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   labels:
     app: m3dbnode
-  image: quay.io/m3db/m3dbnode:latest
+  image: FEATURE_DOCKER_IMAGE
   replicationFactor: 3
   numberOfShards: 64
   etcdEndpoints:
