--- a/scripts/comparator/m3query.yml
+++ b/scripts/comparator/m3query.yml
@@ -21,3 +21,12 @@ metrics:
 
 tagOptions:
   idScheme: quoted
+
+tracing:
+  backend: jaeger
+  jaeger:
+    reporter:
+      localAgentHostPort: jaeger:6831
+    sampler:
+      type: const
+      param: 1
