--- a/scripts/development/m3_stack/m3coordinator.yml
+++ b/scripts/development/m3_stack/m3coordinator.yml
@@ -59,3 +59,12 @@ carbon:
 
 tagOptions:
   idScheme: quoted
+
+tracing:
+  backend: jaeger
+  jaeger:
+    reporter:
+      localAgentHostPort: jaeger:6831
+    sampler:
+      type: const
+      param: 1
