--- a/scripts/vagrant/multi/Vagrantfile
+++ b/scripts/vagrant/multi/Vagrantfile
@@ -77,7 +77,7 @@ Vagrant.configure("2") do |config|
         azure.vm_name = "m3-dev-primary-" + $USER
         azure.vm_size = "Standard_D32s_v3"
         #azure.vm_size = "Standard_D64s_v3"
-        azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP0 + "-primary"
+        azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP0
       end
 
       machine.vm.provider :google do |google, override|
@@ -130,7 +130,7 @@ Vagrant.configure("2") do |config|
         azure.vm_name = "m3-dev-secondary-" + $USER
         azure.vm_size = "Standard_D32s_v3"
         #azure.vm_size = "Standard_D64s_v3"
-        azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP1 + "-secondary"
+        azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP1
       end
 
       machine.vm.provider :google do |google, override|
@@ -182,7 +182,7 @@ Vagrant.configure("2") do |config|
 
         azure.vm_name = "m3-dev-benchmarker-" + $USER
         azure.vm_size = "Standard_D2s_v3"
-        azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP2 + "-benchmarker"
+        azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP2
       end
 
       machine.vm.provider :google do |google, override|
