Add group nums to vm name.

--- a/scripts/vagrant/multi/Vagrantfile
+++ b/scripts/vagrant/multi/Vagrantfile
@@ -74,7 +74,7 @@ Vagrant.configure("2") do |config|
       machine.vm.provider :azure do |azure, override|
         do_common_azure.call azure, override
 
-        azure.vm_name = "m3-dev-primary-" + $USER
+        azure.vm_name = "m3-dev-primary-" + $USER + $AZURE_GROUP0
         azure.vm_size = "Standard_D32s_v3"
         #azure.vm_size = "Standard_D64s_v3"
         azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP0
@@ -127,7 +127,7 @@ Vagrant.configure("2") do |config|
       machine.vm.provider :azure do |azure, override|
         do_common_azure.call azure, override
 
-        azure.vm_name = "m3-dev-secondary-" + $USER
+        azure.vm_name = "m3-dev-secondary-" + $USER + $AZURE_GROUP1
         azure.vm_size = "Standard_D32s_v3"
         #azure.vm_size = "Standard_D64s_v3"
         azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP1
@@ -180,7 +180,8 @@ Vagrant.configure("2") do |config|
       machine.vm.provider :azure do |azure, override|
         do_common_azure.call azure, override
 
-        azure.vm_name = "m3-dev-benchmarker-" + $USER
+        azure.vm_name = "m3-dev-benchmarker-" + $USER + $AZURE_GROUP2
+
         azure.vm_size = "Standard_D2s_v3"
         azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP2
       end
