--- a/scripts/vagrant/multi/Vagrantfile
+++ b/scripts/vagrant/multi/Vagrantfile
@@ -47,7 +47,7 @@ Vagrant.configure("2") do |config|
     azure.client_secret = $AZURE_CLIENT_SECRET
     azure.subscription_id = $AZURE_SUBSCRIPTION_ID
 
-    azure.location = "eastus"
+    azure.location = "eastus2"
     azure.nsg_name = "network-m3coordinator"
     # azure.vm_image_urn defaults to `canonical:ubuntuserver:16.04-LTS:latest`
 
@@ -75,7 +75,7 @@ Vagrant.configure("2") do |config|
         do_common_azure.call azure, override
 
         azure.vm_name = "m3-dev-primary-" + $USER + $AZURE_GROUP0
-        azure.vm_size = "Standard_L32s_v2"
+        azure.vm_size = "Standard_L32s"
         azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP0
       end
 
@@ -129,7 +129,7 @@ Vagrant.configure("2") do |config|
         do_common_azure.call azure, override
 
         azure.vm_name = "m3-dev-secondary-" + $USER + $AZURE_GROUP1
-        azure.vm_size = "Standard_L32s_v2"
+        azure.vm_size = "Standard_L32s"
         azure.resource_group_name = "vagrant-dev" + $AZURE_GROUP1
       end
 
