Removing consolidation which was only used in one place and immediately de-consolidated

--- a/.fossa.yml
+++ b/.fossa.yml
@@ -62,6 +62,10 @@ analyze:
     path: src/cmd/services/m3query/main
     options:
       allow-unresolved: true
+  - name: github.com/m3db/m3/src/cmd/services/m3comparator/main
+    type: go
+    target: github.com/m3db/m3/src/cmd/services/m3comparator/main
+    path: src/cmd/services/m3comparator/main
   - name: github.com/m3db/m3/src/cmd/tools/carbon_load/main
     type: go
     target: github.com/m3db/m3/src/cmd/tools/carbon_load/main
