Wait until bootstrapped before killing next node and other minor fixes.

--- a/scripts/vagrant/provision/manifests/promremotebench-multi.yaml
+++ b/scripts/vagrant/provision/manifests/promremotebench-multi.yaml
@@ -53,3 +53,5 @@ spec:
           value: "100ms"
         - name: PROMREMOTEBENCH_QUERY_DEBUG
           value: "true"
+        - name: PROMREMOTEBENCH_QUERY_DEBUG_LENGTH
+          value: "0"
