[aggregator] Add compression for data sent to aggregator

--- a/scripts/docker-integration-tests/aggregator/m3coordinator.yml
+++ b/scripts/docker-integration-tests/aggregator/m3coordinator.yml
@@ -78,6 +78,7 @@ downsample:
             low: 0.7
             high: 1.0
       connection:
+        compress: snappy
         writeTimeout: 250ms
 
 ingest:
