Add m3msg compression

--- a/scripts/docker-integration-tests/aggregator/m3aggregator.yml
+++ b/scripts/docker-integration-tests/aggregator/m3aggregator.yml
@@ -253,6 +253,7 @@ aggregator:
                 initialBackoff: 2s
                 maxBackoff: 10s
               connection:
+                compress: snappy
                 dialTimeout: 5s
                 writeTimeout: 5s
                 retry:
