--- a/scripts/docker-integration-tests/coordinator_config_rules/m3coordinator.yml
+++ b/scripts/docker-integration-tests/coordinator_config_rules/m3coordinator.yml
@@ -2,7 +2,9 @@ listenAddress:
   value: "0.0.0.0:7201"
 
 logging:
-  level: info
+  # TODO restore to info level
+  # level: info
+  level: debug
 
 metrics:
   scope:
@@ -20,6 +22,8 @@ clusters:
         type: aggregated
         retention: 10h
         resolution: 5s
+        downsample:
+          all: false
       - namespace: unagg
         type: unaggregated
         retention: 10m
@@ -39,26 +43,31 @@ clusters:
 
 downsample:
   rules:
-    # mappingRules:
-    #   - filter: "foo:bar"
-    #     aggregation:
-    #       - 2
-    #     storagePolicies:
-    #       - retention: 12h
-    #         resolution: 10s
-    #     drop: false
-    rollupRules:
-      - filter: "foo:bar"
-        transforms:
-          - rollup:
-              metricName: "new_metric"
-            aggregate:
-              type: Sum
+    mappingRules:
+      - name: "nginx metrics"
+        filter: "app:nginx*"
+        aggregations: ["Last"]
         storagePolicies:
-          - retention: 10h
-            resolution: 5s
-        name: "testRollup"
-
+          - resolution: 5s
+            retention: 10h
+    rollupRules:
+      - name: "requests per second by status code"
+        filter: "__name__:http_requests app:* status_code:* endpoint:*"
+        transforms:
+          - transform:
+              type: "PerSecond"
+          - rollup:
+              metricName: "http_requests_by_status_code"
+              groupBy: ["app", "status_code", "endpoint"]
+              aggregations: ["Sum"]
+        storagePolicies:
+          - resolution: 5s
+            retention: 10h
+  # NB(r): Use high buffer past limits for test since we are using
+  # resolution of 5s which races against the timestamps being ingested.
+  bufferPastLimits:
+    - resolution: 0s
+      bufferPast: 30s
 
 tagOptions:
   idScheme: quoted
