--- a/glide.yaml
+++ b/glide.yaml
@@ -24,6 +24,9 @@ import:
   - package: github.com/coreos/etcd
     version: 3.2.28
 
+  - package: github.com/coreos/etcd
+    version: 3.2.28
+
   - package: github.com/pkg/errors
     version: ^0.8
 
