--- a/.fossa.yml
+++ b/.fossa.yml
@@ -90,6 +90,10 @@ analyze:
     type: go
     target: github.com/m3db/m3/src/cmd/tools/read_index_ids/main
     path: src/cmd/tools/read_index_ids/main
+  - name: github.com/m3db/m3/src/cmd/tools/verify_data_files/main
+    type: go
+    target: github.com/m3db/m3/src/cmd/tools/verify_data_files/main
+    path: src/cmd/tools/verify_data_files/main
   - name: github.com/m3db/m3/src/cmd/tools/verify_index_files/main
     type: go
     target: github.com/m3db/m3/src/cmd/tools/verify_index_files/main
