Backout change not required

--- a/glide.yaml
+++ b/glide.yaml
@@ -153,7 +153,7 @@ import:
       - errgroup
 
   - package: github.com/google/go-cmp
-    version: ^0.3
+    version: 0.3
     subpackages:
       - cmp
 
