--- a/src/cmd/tools/q/main/placements/examples/newNode.yaml
+++ b/src/cmd/tools/q/main/placements/examples/newNode.yaml
@@ -2,7 +2,7 @@
 instances:
   - id: node1
     isolationGroup: isoGroup1
-    zone: etcdZone1
+    zone: embedded
     weight: 100
     endpoint: targetHostname1:9000
     hostname: newNodeHostname1
