--- a/scripts/vagrant/provision/manifests/m3db-secondary.yaml
+++ b/scripts/vagrant/provision/manifests/m3db-secondary.yaml
@@ -5,13 +5,17 @@ metadata:
 spec:
   labels:
     app: m3dbnode
-  image: quay.io/m3db/m3dbnode:latest
-  replicationFactor: 1
+  image: FEATURE_DOCKER_IMAGE
+  replicationFactor: 3
   numberOfShards: 64
   etcdEndpoints:
   - http://etcd-0.etcd:2379
   isolationGroups:
   - name: group1
+    numInstances: 1
+  - name: group2
+    numInstances: 1
+  - name: group3
     numInstances: 1
   podIdentityConfig:
     sources:
