Add option to allow unresolved for m3aggregator

--- a/.fossa.yml
+++ b/.fossa.yml
@@ -20,6 +20,8 @@ analyze:
     type: go
     target: github.com/m3db/m3/src/cmd/services/m3aggregator/main
     path: src/cmd/services/m3aggregator/main
+    options:
+      allow-unresolved: true
   - name: github.com/m3db/m3/src/cmd/services/m3collector/main
     type: go
     target: github.com/m3db/m3/src/cmd/services/m3collector/main
