--- a/scripts/vagrant/provision/manifests/kind-kube-cluster.yaml
+++ b/scripts/vagrant/provision/manifests/kind-kube-cluster.yaml
@@ -4,5 +4,9 @@ nodes:
 - role: control-plane
 - role: worker
   extraPortMappings:
+    # NB(bodu): Forward m3coordinator port.
   - containerPort: 30000
     hostPort: 7201
+    # NB(bodu): Forward grafana port.
+  - containerPort: 30001
+    hostPort: 3000
