--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,6 +105,7 @@ pages:
     - "Docker & Kernel Configuration": "operational_guide/kernel_configuration.md"
     - "etcd": "operational_guide/etcd.md"
     - "Monitoring": "operational_guide/monitoring.md"
+    - "Configuring Mapping & Rollup Rules": "operational_guide/mapping_rollup.md"
   - "Integrations":
     - "Prometheus": "integrations/prometheus.md"
     - "Graphite": "integrations/graphite.md"
