Support promremotebench metrics.

--- a/scripts/vagrant/provision/manifests/kube-prometheus/prometheus-prometheus.yaml
+++ b/scripts/vagrant/provision/manifests/kube-prometheus/prometheus-prometheus.yaml
@@ -18,6 +18,7 @@ spec:
   resources:
     requests:
       memory: 400Mi
+  retention: '48h'
   ruleSelector:
     matchLabels:
       prometheus: k8s
