--- a/scripts/vagrant/provision/manifests/kube-prometheus/grafana-deployment.yaml
+++ b/scripts/vagrant/provision/manifests/kube-prometheus/grafana-deployment.yaml
@@ -51,6 +51,9 @@ spec:
         - mountPath: /grafana-dashboard-definitions/0/m3db-node-details
           name: grafana-dashboard-m3db-node-details
           readOnly: false
+        - mountPath: /grafana-dashboard-definitions/0/promremotebench
+          name: grafana-dashboard-promremotebench
+          readOnly: false
         - mountPath: /grafana-dashboard-definitions/0/k8s-resources-cluster
           name: grafana-dashboard-k8s-resources-cluster
           readOnly: false
