--- a/scripts/vagrant/provision/manifests/kube-prometheus/grafana-deployment.yaml
+++ b/scripts/vagrant/provision/manifests/kube-prometheus/grafana-deployment.yaml
@@ -48,6 +48,12 @@ spec:
         - mountPath: /grafana-dashboard-definitions/0/k8s-node-rsrc-use
           name: grafana-dashboard-k8s-node-rsrc-use
           readOnly: false
+        - mountPath: /grafana-dashboard-definitions/0/m3db-node-details
+          name: grafana-dashboard-m3db-node-details
+          readOnly: false
+        - mountPath: /grafana-dashboard-definitions/0/promremotebench
+          name: grafana-dashboard-promremotebench
+          readOnly: false
         - mountPath: /grafana-dashboard-definitions/0/k8s-resources-cluster
           name: grafana-dashboard-k8s-resources-cluster
           readOnly: false
@@ -105,6 +111,12 @@ spec:
       - configMap:
           name: grafana-dashboard-k8s-resources-pod
         name: grafana-dashboard-k8s-resources-pod
+      - configMap:
+          name: grafana-dashboard-m3db-node-details
+        name: grafana-dashboard-m3db-node-details
+      - configMap:
+          name: grafana-dashboard-promremotebench
+        name: grafana-dashboard-promremotebench
       - configMap:
           name: grafana-dashboard-k8s-resources-workload
         name: grafana-dashboard-k8s-resources-workload
