--- a/glide.yaml
+++ b/glide.yaml
@@ -260,3 +260,6 @@ import:
 
   - package: go.uber.org/config
     version: ^1.3.1
+
+  - package: github.com/twotwotwo/sorts
+    version: bf5c1f2b8553dec28372aa6ac5a8bf53a20a4c5b
