Upgrade prom and m3db operators.

--- a/scripts/vagrant/provision/manifests/kube-prometheus/0prometheus-operator-clusterRole.yaml
+++ b/scripts/vagrant/provision/manifests/kube-prometheus/0prometheus-operator-clusterRole.yaml
@@ -18,6 +18,8 @@ rules:
   - alertmanagers/finalizers
   - servicemonitors
   - prometheusrules
+  - podmonitors
+  - thanosrulers
   verbs:
   - '*'
 - apiGroups:
