[vagrant] Update operator bundle to be able to patch pod annotations

--- a/scripts/vagrant/provision/manifests/operator.yaml
+++ b/scripts/vagrant/provision/manifests/operator.yaml
@@ -31,7 +31,7 @@ rules:
   verbs: ["create", "get", "deletecollection", "delete"]
 - apiGroups: [""]
   resources: ["pods"]
-  verbs: ["list", "get", "watch", "update"]
+  verbs: ["list", "get", "watch", "update", "patch"]
 - apiGroups: ["apps"]
   resources: ["statefulsets", "deployments"]
   verbs: ["*"]
