--- a/scripts/docker-integration-tests/aggregator/m3aggregator.yml
+++ b/scripts/docker-integration-tests/aggregator/m3aggregator.yml
@@ -71,7 +71,7 @@ rawtcp:
 
 kvClient:
   etcd:
-    env: default_env
+    env: override_test_env
     zone: embedded
     service: m3aggregator
     cacheDir: /var/lib/m3kv
@@ -82,7 +82,7 @@ kvClient:
 
 runtimeOptions:
   kvConfig:
-    environment: default_env
+    environment: override_test_env
     zone: embedded
   writeValuesPerMetricLimitPerSecondKey: write-values-per-metric-limit-per-second
   writeValuesPerMetricLimitPerSecond: 0
@@ -131,7 +131,7 @@ aggregator:
     placementKV:
       namespace: /placement
       zone: embedded
-      environment: default_env
+      environment: override_test_env
     placementWatcher:
       key: m3aggregator
       initWatchTimeout: 15s
@@ -164,7 +164,7 @@ aggregator:
   placementManager:
     kvConfig:
       namespace: /placement
-      environment: default_env
+      environment: override_test_env
       zone: embedded
     placementWatcher:
       key: m3aggregator
@@ -175,7 +175,7 @@ aggregator:
   resignTimeout: 1m
   flushTimesManager:
     kvConfig:
-      environment: default_env
+      environment: override_test_env
       zone: embedded
     flushTimesKeyFmt: shardset/%d/flush
     flushTimesPersistRetrier:
@@ -190,7 +190,7 @@ aggregator:
       ttlSeconds: 10
     serviceID:
       name: m3aggregator
-      environment: default_env
+      environment: override_test_env
       zone: embedded
     electionKeyFmt: shardset/%d/lock
     campaignRetrier:
@@ -243,7 +243,7 @@ aggregator:
               topicName: aggregated_metrics
               topicServiceOverride:
                 zone: embedded
-                environment: default_env
+                environment: override_test_env
               messageRetry:
                 initialBackoff: 1m
                 maxBackoff: 2m
