--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,8 +10,50 @@ common: &common
     manual: true
 
 steps:
+  - name: "Codegen"
+    command: make clean install-vendor-m3 test-all-gen
+    env:
+      CGO_ENABLED: 0
+      GIMME_GO_VERSION: 1.12.x
+    plugins:
+        gopath-checkout#v1.0.1:
+          import: github.com/m3db/m3
+    <<: *common
+  - name: "Unit %n"
+    command: make clean install-vendor-m3 test-ci-unit
+    parallelism: 4
+    plugins:
+      docker-compose#v2.5.1:
+        run: app
+        workdir: /go/src/github.com/m3db/m3
+    <<: *common
+  - name: "Big Unit %n"
+    command: make clean install-vendor-m3 test-ci-big-unit
+    parallelism: 2
+    plugins:
+      docker-compose#v2.5.1:
+        run: app
+        workdir: /go/src/github.com/m3db/m3
+    <<: *common
+  - name: "Services, Tools, Metalint"
+    command: make clean install-vendor-m3 services tools metalint
+    plugins:
+      docker-compose#v2.5.1:
+        run: app
+        workdir: /go/src/github.com/m3db/m3
+    <<: *common
   - name: "Integration (:docker:)"
     command: make clean install-vendor-m3 docker-integration-test
+    parallelism: 2
+    env:
+      CGO_ENABLED: 0
+      GIMME_GO_VERSION: 1.13.x
+    plugins:
+        gopath-checkout#v1.0.1:
+          import: github.com/m3db/m3
+    <<: *common
+  - name: "Prometheus compatibility (:docker:)"
+    command: make clean install-vendor-m3 docker-compatibility-test
     parallelism: 1
     env:
       CGO_ENABLED: 0
@@ -20,3 +62,56 @@ steps:
         gopath-checkout#v1.0.1:
           import: github.com/m3db/m3
     <<: *common
+  - name: "Integration (dbnode Recently Read) %n"
+    parallelism: 2
+    command: make clean install-vendor-m3 test-ci-integration-dbnode cache_policy=recently_read
+    plugins:
+      docker-compose#v2.5.1:
+        run: app
+        workdir: /go/src/github.com/m3db/m3
+    <<: *common
+  - name: "Integration (dbnode LRU) %n"
+    parallelism: 2
+    command: make clean install-vendor-m3 test-ci-integration-dbnode cache_policy=lru
+    plugins:
+      docker-compose#v2.5.1:
+        run: app
+        workdir: /go/src/github.com/m3db/m3
+    <<: *common
+  - label: "Integration (collector, aggregator, m3em, cluster, msg, metrics) %n"
+    parallelism: 4
+    command: make clean install-vendor-m3 test-ci-integration-collector test-ci-integration-aggregator test-ci-integration-m3em test-ci-integration-cluster test-ci-integration-msg test-ci-integration-metrics
+    plugins:
+      docker-compose#v2.5.1:
+        run: app
+        workdir: /go/src/github.com/m3db/m3
+    <<: *common
+  - name: "Documentation tests"
+    command: make clean install-vendor-m3 docs-test
+    env:
+      CGO_ENABLED: 0
+      GIMME_GO_VERSION: 1.12.x
+    plugins:
+        gopath-checkout#v1.0.1:
+          import: github.com/m3db/m3
+    <<: *common
+  - label: "FOSSA license scan"
+    command: make clean install-vendor-m3 fossa
+    plugins:
+      docker-compose#v2.5.1:
+        run: app
+        workdir: /go/src/github.com/m3db/m3
+        env:
+          - FOSSA_API_KEY
+    <<: *common
+  - name: "Check for docker and docs builds :docker: :books:"
+    commands:
+    - ".ci/docker/check_do_docker.sh"
+    - ".buildkite/scripts/check_do_docs.sh"
+    agents:
+      queue: init
+    timeout_in_minutes: 10
+    retry:
+      automatic:
+        limit: 1
+      manual: true
