--- a/scripts/docker-integration-tests/aggregator_legacy/m3coordinator.yml
+++ b/scripts/docker-integration-tests/aggregator_legacy/m3coordinator.yml
@@ -54,24 +54,32 @@ clusters:
 downsample:
   remoteAggregator:
     client:
-      type: m3msg
-      m3msg:
-        producer:
-          writer:
-            topicName: aggregator_ingest
-            topicServiceOverride:
-              zone: embedded
-              environment: override_test_env
-            placement:
-              isStaged: true
-            placementServiceOverride:
-              namespaces:
-                placement: /placement
-            messagePool:
-              size: 16384
-              watermark:
-                low: 0.2
-                high: 0.5
+      placementKV:
+        namespace: /placement
+        environment: override_test_env
+      placementWatcher:
+        key: m3aggregator
+        initWatchTimeout: 10s
+      hashType: murmur32
+      shardCutoffLingerDuration: 1m
+      flushSize: 1440
+      maxTimerBatchSize: 1120
+      queueSize: 10000
+      queueDropType: oldest
+      encoder:
+        initBufferSize: 2048
+        maxMessageSize: 10485760
+        bytesPool:
+          buckets:
+            - capacity: 2048
+              count: 4096
+            - capacity: 4096
+              count: 4096
+          watermark:
+            low: 0.7
+            high: 1.0
+      connection:
+        writeTimeout: 250ms
 
 ingest:
   ingester:
