--- a/scripts/development/m3_stack/m3coordinator-aggregator.yml
+++ b/scripts/development/m3_stack/m3coordinator-aggregator.yml
@@ -19,10 +19,10 @@ clusters:
       - namespace: metrics_0_30m
         type: unaggregated
         retention: 30m
-      - namespace: metrics_10s_48h
+      - namespace: metrics_30s_24h
         type: aggregated
-        retention: 48h
-        resolution: 10s
+        retention: 24h
+        resolution: 30s
     client:
       config:
         service:
@@ -34,8 +34,36 @@ clusters:
             - zone: embedded
               endpoints:
                 - m3db_seed:2379
-      # proto:
-      #   schemaFilePath: /etc/m3coordinator/schema.proto
+
+downsample:
+  remoteAggregator:
+    client:
+      placementKV:
+        namespace: /placement
+        environment: default_env
+      placementWatcher:
+        key: m3aggregator
+        initWatchTimeout: 10s
+      hashType: murmur32
+      shardCutoffLingerDuration: 1m
+      flushSize: 1440
+      maxTimerBatchSize: 1120
+      queueSize: 10000
+      queueDropType: oldest
+      encoder:
+        initBufferSize: 2048
+        maxMessageSize: 10485760
+        bytesPool:
+          buckets:
+            - capacity: 2048
+              count: 4096
+            - capacity: 4096
+              count: 4096
+          watermark:
+            low: 0.7
+            high: 1.0
+      connection:
+        writeTimeout: 250ms
 
 ingest:
   ingester:
