--- a/scripts/development/m3_stack/prometheus01.yml
+++ b/scripts/development/m3_stack/prometheus01.yml
@@ -1,7 +1,6 @@
 global:
-  # Don't apply external labels for 
-  # external_labels:
-  #   role: "remote"
+  external_labels:
+    role: "remote"
   scrape_interval:     10s
   evaluation_interval: 10s
 
@@ -43,6 +42,7 @@ scrape_configs:
 
 remote_read:
   - url: http://m3coordinator01:7201/api/v1/prom/remote/read
+    read_recent: true
 
 remote_write:
   - url: http://m3coordinator01:7201/api/v1/prom/remote/write
