--- a/scripts/development/m3_stack/prometheus02.yml
+++ b/scripts/development/m3_stack/prometheus02.yml
@@ -1,6 +1,6 @@
 global:
-  # external_labels:
-  #   role: "remote_replica2"
+  external_labels:
+    role: "remote"
   scrape_interval:     10s
   evaluation_interval: 10s
 
@@ -42,6 +42,7 @@ scrape_configs:
 
 remote_read:
   - url: http://m3coordinator01:7201/api/v1/prom/remote/read
+    read_recent: true
 
 remote_write:
   - url: http://m3coordinator01:7201/api/v1/prom/remote/write
