Add pass-through in m3aggregator using rawtcp server
fix

integration test

fix integration test

fix

Add metrics for passthrough in follower instances

[aggregator] Add compatibility for rollup rules with timed metrics (#2251)

Add pass-through in m3aggregator using rawtcp server

fix

--- a/scripts/docker-integration-tests/aggregator/m3aggregator.yml
+++ b/scripts/docker-integration-tests/aggregator/m3aggregator.yml
@@ -320,6 +320,8 @@ aggregator:
                 flushInterval: 1s
                 writeBufferSize: 16384
                 readBufferSize: 256
+  passthrough:
+    enabled: true
   forwarding:
     maxConstDelay: 1m # Need to add some buffer window, since timed metrics by default are delayed by 1min.
   entryTTL: 1h
