Allow num connections to be set by config

--- a/scripts/docker-integration-tests/aggregator/m3coordinator.yml
+++ b/scripts/docker-integration-tests/aggregator/m3coordinator.yml
@@ -81,6 +81,9 @@ downsample:
             placementServiceOverride:
               namespaces:
                 placement: /placement
+            connection:
+              # NB(r): Test integration test with high number of connections.
+              numConnections: 32
             messagePool:
               size: 16384
               watermark:
